; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/oprofile/extr_op_model_xscale.c_xscale_pmu_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/oprofile/extr_op_model_xscale.c_xscale_pmu_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PMU_ENABLE = common dso_local global i32 0, align 4
@XSCALE_PMU_IRQ = common dso_local global i32 0, align 4
@results = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @xscale_pmu_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xscale_pmu_stop() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @read_pmnc()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* @PMU_ENABLE, align 4
  %4 = xor i32 %3, -1
  %5 = load i32, i32* %1, align 4
  %6 = and i32 %5, %4
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @write_pmnc(i32 %7)
  %9 = load i32, i32* @XSCALE_PMU_IRQ, align 4
  %10 = load i32, i32* @results, align 4
  %11 = call i32 @free_irq(i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @read_pmnc(...) #1

declare dso_local i32 @write_pmnc(i32) #1

declare dso_local i32 @free_irq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
